# agros2d

./: .gitignore
agros2d-binary/: CMakeLists.txt
agros2d-generator/: CMakeLists.txt
agros2d-library/: CMakeLists.txt
agros2d-solver/: CMakeLists.txt
debian/: control
solver-external/: CMakeLists.txt
